fix croppie and styles

--- a/scss/_modals.scss
+++ b/scss/_modals.scss
@@ -1913,10 +1913,22 @@ ul.professionals, ul.subprofessionals {
 		font-weight: bold;
 		padding-left: 0.521vw;
 	}
-	.button_blc {
-		width: auto;
-		margin-top: 40/$width*100vw;
-		margin-bottom: 20/$width*100vw;
+	.modal.change_picture form{
+		.button_blc {
+			margin-top: 40/$width*100vw;
+			margin-bottom: 20/$width*100vw;
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+			input[type="submit"], input[type="reset"], input[type="button"], a.button[rel="modal:close"] {
+				margin-right: 0;
+			}
+			.delete {
+				width: fit-content;
+				padding-left: 10/$width*100vw;
+				padding-right: 10/$width*100vw;
+			}
+		}
 	}
 	.modal input[type="text"], .modal input[type="tel"], .modal input[type="email"], .modal input[type="url"], .modal input[type="date"], .modal textarea, .modal select, .modal .select.multi > p {
 		font-size: 4vw;
@@ -2084,8 +2096,8 @@ ul.professionals, ul.subprofessionals {
 	}
 	.modal.popup_blc .drop_zone {
 		p, a {
-			font-size: 3vw;
-			line-height: 4vw;
+			font-size: 4vw;
+			line-height: 5vw;
 		}
 	}
 	.modal.talent_edit .upload__file_confirm p{
@@ -2112,6 +2124,39 @@ ul.professionals, ul.subprofessionals {
 	.modal.photo_edit .picture_block .pic_blc {
 		width: 150/$width*100vw;
 		height: 150/$width*100vw;
+	}
+	.modal.change_picture {
+		form {
+			align-items: center;
+			.select_pic {
+				font-size: 4vw;
+				line-height: 6vw;
+			}
+			.upload__file {
+				width: 100%;
+				margin: 0 auto;
+				margin-bottom: 30/$width*100vw;
+			}
+			.crop_pic_result {
+				width: 145/$width*100vw;
+				height: 145/$width*100vw;
+				margin-top: 0;
+			}
+			.croppie-container .cr-viewport {
+				width: 26vw !important;
+				height: 26vw !important;
+			}
+		}
+	}
+	.modal.popup_blc .drop_zone {
+        height: 26vw;
+    }
+	.modal.change_picture form .upload__file .drop_zone {
+		padding: 30/$width*100vw 8/$width*100vw;
+	}
+	.modal.popup_blc .drop_zone .upload {
+		padding: 11/$width*100vw 20/$width*100vw;
+		border-radius: 1.33vw;
 	}
 	
 }
