--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1566,9 +1566,6 @@ footer {
     section .team_block .team {
         margin-right: 0;
     }
-    .modal.popup_blc .drop_zone {
-        height: 25vw;
-    }
 }
 
 @import "_modals";
